--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,8 @@
         {
             "name": "generalms",
             "request": "launch",
-            "type": "dart"
+            "type": "dart",
+            "program": "lib/screens/login.dart"
         },
         {
             "name": "generalms (profile mode)",
