--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.6
   firebase_core: ^2.30.1
   cloud_firestore: ^4.17.2
+  image_picker: ^1.1.2
+  firebase_storage: ^11.7.7
 
 
 dev_dependencies:
