--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,12 +31,14 @@ dependencies:
   flutter:
     sdk: flutter
   firebase_auth: ^4.19.4
+  charts_flutter: ^0.12.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  firebase_core: ^2.30.1
-  cloud_firestore: ^4.17.2
+  cloud_firestore: ^4.17.3
+  firebase_core: ^2.31.0
+  firebase_auth: ^4.19.5
 
 
 dev_dependencies:
