--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cloud_firestore: ^4.17.2
   image_picker: ^1.1.2
   firebase_storage: ^11.7.7
+  flutter_secure_storage: ^9.2.2
 
 
 dev_dependencies:
