--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   image_picker: ^1.1.2
   firebase_storage: ^11.7.7
   flutter_secure_storage: ^9.2.2
+  charts_flutter: ^0.12.0
 
 
 dev_dependencies:
