--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_storage: ^11.7.7
   flutter_secure_storage: ^9.2.2
   charts_flutter: ^0.12.0
+  cached_network_image: ^3.3.1
 
 
 dev_dependencies:
